@@ -47,11 +47,11 @@ subprojects {
         implementation 'com.fasterxml.jackson.core:jackson-annotations:2.16.1'
         implementation 'com.graphql-java:graphql-java:21.1'
         implementation 'com.graphql-java:graphql-java-extended-scalars:20.2'
-        implementation 'com.sparkjava:spark-core:2.9.4'
+        implementation 'io.javalin:javalin:6.2.0'
         implementation 'org.pac4j:pac4j-core:5.6.1'
         implementation 'org.pac4j:pac4j-oidc:5.6.1'
         implementation 'org.pac4j:pac4j-http:5.6.1'
-        implementation 'org.pac4j:spark-pac4j:5.0.1'
+        implementation 'org.pac4j:javalin-pac4j:6.0.0'
         implementation 'org.javers:javers-core:6.14.0'
         implementation 'com.nimbusds:nimbus-jose-jwt:9.40'
         implementation 'com.schibsted.spt.data:jslt:0.1.14'
@@ -101,7 +101,7 @@ subprojects {
     }
 
     test {
-        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED")
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED", "-XX:+EnableDynamicAgentLoading")
         useJUnitPlatform()
         testLogging {
             events "passed", "skipped", "failed" //, "standardOut", "standardError"
